# rff

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: bonus.rs  choice.rs  fuzzy.rs  matcher.rs  matches.rs  matrix.rs  rff.rs  score.rs  scorer.rs
ci/: before_deploy.sh  install.sh  script.sh
src/: app.rs  args.rs  bonus.rs  choice.rs  consts.rs  interface.rs  lib.rs  main.rs  matcher.rs  matching.rs  matrix.rs  scorer.rs  stdin.rs
src/ansi/: clear.rs  color.rs  cursor.rs  macros.rs  mod.rs  style.rs
src/fuzzy/: bonus.rs  consts.rs  mat.rs  mod.rs  score.rs
src/interface/: mod.rs
src/interface/ansi/: clear.rs  color.rs  cursor.rs  macros.rs  mod.rs
src/interface/terminal/: event.rs  input.rs  mod.rs
src/terminal/: event.rs  input.rs  mod.rs
