[package]
name = "rff"
version = "1.0.0"
authors = ["Andrew Stewart <andrew@stwrt.ca>"]
homepage = "https://github.com/stewart/rff"
description = "rff is a fast, simple fuzzy text selector for the terminal."
license = "MIT"
categories = ["command-line-utilities"]
exclude = ["benches/*", "ci/*"]

[dependencies]
clap = "2.32.0"

[[bin]]
name = "rff"
